deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskmgr
  labels:
    name: taskmgr
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
